#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
LP-2009-06-24-0: Enhancem.:  Ignoring JMX configuration arguments with 61 during
                             the installation
                 Review:     AP

JG-2009-06-22-0: Enhancem.:  added test for IZ 2899
                             cleanup of framework function add_rqs
                 Review:     DG

MP-2009-06-18-0: Enhancem:   added test for gridengine IZ 2998 and 2999: jsv 
                             number of arguments is handled as read-only 
                             parameter. Changing CMDARG[1-n] always changes 
                             the first commandline argument
                 Review:     EB

MP-2009-06-17-0: Enhancem:   added test for gridengine IZ 2942: qconf -ke[j] 
                             must return non-zero exit code on failure
                 Review:     AP


JG-2009-06-17-0: Enhancem.:  new test for IZ 3017
                             new test case for qconf -sstree without a
                             sharetree configured
                             some cleanup
                 Review:     HP

JG-2009-06-17-0: Enhancem.:  new test case for IZ 3053 in the qconf test:
                             deleting manager or operator must be rejected for
                             the user root and the admin user 
                 Review:     EB

MD-2009-06-15-0: CVS:        Created V62u3_TAG
-----------------------------------------------------

DG-2009-06-09-0: Enhancem.:  added qmod test procedure
                 Review:     SH

CR-2009-06-04-0: Bugfix:     initalize major_release variable to "0" in 