@@ -6,6 +6,9 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+DG-2009-07-02-0: Enhancem.:  added test for IZ 3071 in qmod_general
+                 Review:     CR
+
 LP-2009-06-24-0: Enhancem.:  Ignoring JMX configuration arguments with 61 during
                              the installation
                  Review:     AP
